--- a/IUNewbies/index.html
+++ b/IUNewbies/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <title>Hello, world!</title>
+    <title>IUNewbies</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
 
