commit css and javascript folders

--- a/IUNewbies/index.html
+++ b/IUNewbies/index.html
@@ -18,31 +18,24 @@
 </head>
 <body>
 <div class="container">
-    <div class="row">
-        <div class="col-lg-1">
-            <figure>
-                <img src="Figures/indiana_hoosiers.png" width="84" height="60">
-            </figure>
-        </div>
-        <div class="col-lg-6">
-            <h1>IU Newbies</h1>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-4">
-
-        </div>
-        <div class="col-lg-8">
-            <div>
-                <ul class="nav navbar-nav">
-                    <li><a href="#Home">Home</a></li>
-                    <li><a href="#AboutUs">AboutUs</a></li>
-                    <li><a href="#ContactUs">ContactUs</a></li>
-                    <li><a href="#HoosierLife">HoosierLife</a></li>
-                </ul>
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="#">
+                        <img class="t-image" src="Figures/indiana_hoosiers.png" width="84" height="60" position="realtive">
+                    </a>
+                    <a href="#" class="navbar-brand">IUNEWBIES</a>
+                </div>
+                <div>
+                    <ul class="nav navbar-nav pull-right">
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">AboutUs</a></li>
+                        <li><a href="#">ContactUs</a></li>
+                        <li><a href="#">HoosierLife</a></li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </div>
+        </nav>
     <div class="row body">
         <div class="center">
         <div class="col-lg-12 stackem">
